@@ -18,7 +18,10 @@ hwloc-info \- Show some information about some objects, a topology or supported 
 \fI<object>\fR...
 .PP
 .B hwloc-info
-[ \fIoptions \fR]...
+[ \fIoptions \fR] root
+.
+.B hwloc-info
+[ \fIoptions \fR] [ topology | levels | support ]
 .
 .PP
 \fI<object>\fR... may be a space-separated list of target objects to query.
@@ -39,6 +42,16 @@ The list may also contain special keywords such as:
 
     \fBroot\fR for the topology root object.
 
+    \fBlevels\fR for information about topology levels (default if no target object is given, identical to \fB\-\-topology\fR).
+
+    \fBtopology\fR for topology info attributes stored in the root object (for forward compatibility with topology info attrs in hwloc 3.0).
+
+    \fBsupport\fR for information about supported features (identical to \fB\-\-support\fR).
+
+Real targets and special keywords may be combined:
+
+    $ hwloc-info core:2 topology pu:3 levels
+
 .PP
 Note that hwloc(7) provides a detailed explanation of the hwloc system
 and of valid <object> formats;
@@ -55,6 +68,7 @@ This is the default if some objects are given on the command-line.
 .TP
 \fB\-\-topology\fR
 Report a summary of the topology instead of about some specific objects.
+This is equivalent to passing \fIlevels\fR as a target object on the command-line.
 This is the default if no object is given on the command-line.
 .TP
 \fB\-\-support\fR
@@ -62,6 +76,7 @@ Report the features that are supported by hwloc on the topology.
 The features are those available through the \fBhwloc_topology_get_support()\fR function.
 This is useful for verifying which CPU or memory binding options are supported
 by the current hwloc installation.
+This is equivalent to passing \fIsupport\fR as a target object on the command-line.
 .TP
 \fB\-i\fR <path>, \fB\-\-input\fR <path>
 Read the topology from <path> instead of discovering the topology of the local machine.
@@ -349,6 +364,19 @@ to find where a NUMA node is attached in the hierarchy of CPU cores:
 
     $ hwloc-info --ancestor kind=normal --first -s numa:1
     Package:0
+
+To see levels and topology info attributes stored in the root object:
+
+    $ hwloc-info levels topology
+    depth 0:           1 Machine (type #0)
+     depth 1:          1 Package (type #1)
+      depth 2:         2 Core (type #2)
+       depth 3:        4 PU (type #3)
+    Special depth -3:  1 NUMANode (type #13)
+    info Backend = Linux
+    info LinuxCgroup = /user/622
+    info Architecture = x86_64
+    info hwlocVersion = 3.0.0a1-git
 
 .
 .\" **************************
